--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check DockerHub username
-        run: echo "Username passed to Docker login is:${{ secrets.DOCKER_USERNAME }}"
+        run: echo Username passed to Docker login is:${{ secrets.DOCKER_USERNAME }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -22,4 +22,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/node-cicd-app .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/node-cicd-app
